# quickbox

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .qmake.conf  .travis.yml  CMakeLists.txt  README.md  appdatafiles.pri  build-win.sh  crosscompile-support.pri  datafiles.pri  index.html  params.json  qmlplugin.pri  qmlplugindatafiles.pri  quickbox.pri  quickbox.pro  quickevent.pro  utils.pri
libqf/libqfcore/: CMakeLists.txt  libqfcore-cs_CZ.ts  libqfcore-fr_FR.ts  libqfcore-nb_NO.ts  libqfcore-nl_BE.ts  libqfcore-pl_PL.ts  libqfcore-ru_RU.ts  libqfcore-uk_UA.ts  libqfcore.cs_CZ.qm  libqfcore.cs_CZ.ts  libqfcore.fr_FR.ts  libqfcore.nb_NO.ts  libqfcore.nl_BE.ts  libqfcore.pl_PL.ts  libqfcore.pro  libqfcore.ru_RU.ts  libqfcore.uk_UA.ts  qfcore.qrc
libqf/libqfcore/images/: images.qrc
libqf/libqfcore/src/: src.pri
libqf/libqfqmlwidgets/: CMakeLists.txt  libqfqmlwidgets-cs_CZ.ts  libqfqmlwidgets-fr_FR.ts  libqfqmlwidgets-nb_NO.ts  libqfqmlwidgets-nl_BE.ts  libqfqmlwidgets-pl_PL.ts  libqfqmlwidgets-ru_RU.ts  libqfqmlwidgets-uk_UA.ts  libqfqmlwidgets.cs_CZ.qm  libqfqmlwidgets.cs_CZ.ts  libqfqmlwidgets.fr_FR.ts  libqfqmlwidgets.nb_NO.ts  libqfqmlwidgets.nl_BE.ts  libqfqmlwidgets.pl_PL.ts  libqfqmlwidgets.pro  libqfqmlwidgets.ru_RU.ts  libqfqmlwidgets.uk_UA.ts  qfqmlwidgets.qrc
libqf/libqfqmlwidgets/images/: images.qrc  print.xcf  qf_qmlwidgets_images.qrc  qfqmlwidgets_images.qrc
libqf/libqfqmlwidgets/src/: action.cpp  action.h  actiongroup.cpp  actiongroup.h  boxlayouttypeproperties.cpp  boxlayouttypeproperties.h  checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  datacontroller.cpp  datacontroller.h  dateedit.cpp  dateedit.h  datetimeedit.cpp  datetimeedit.h  dialog.cpp  dialog.h  dialogbuttonbox.cpp  dialogbuttonbox.h  exportcsvtableviewwidget.cpp  exportcsvtableviewwidget.h  exporttableviewwidget.cpp  exporttableviewwidget.h  exporttableviewwidget.ui  frame.cpp  frame.h  gridlayoutproperties.cpp  gridlayoutproperties.h  gridlayoutpropertiesattached.cpp  gridlayoutpropertiesattached.h  gridlayouttypeproperties.cpp  gridlayouttypeproperties.h  headerview.cpp  headerview.h  htmlviewwidget.cpp  htmlviewwidget.h  htmlviewwidget.ui  idatawidget.cpp  idatawidget.h  (+47 more)
libqf/libqfqmlwidgets/style/: dark.css  style.qrc
libqf/plugins/core/: CMakeLists.txt  core.pro  core.qrc
libquickevent/libquickeventcore/: CMakeLists.txt  libquickeventcore-cs_CZ.ts  libquickeventcore-fr_FR.ts  libquickeventcore-nb_NO.ts  libquickeventcore-nl_BE.ts  libquickeventcore-pl_PL.ts  libquickeventcore-ru_RU.ts  libquickeventcore-uk_UA.ts  libquickeventcore.cs_CZ.ts  libquickeventcore.fr_FR.ts  libquickeventcore.nl_BE.ts  libquickeventcore.pl_PL.ts  libquickeventcore.pro  libquickeventcore.qrc  libquickeventcore.uk_UA.ts
libquickevent/libquickeventcore/js/: ogtime.js
libquickevent/libquickeventcore/src/: codedef.cpp  codedef.h  coursedef.cpp  coursedef.h  quickeventcoreglobal.h  resultstatus.cpp  resultstatus.h  runstatus.cpp  runstatus.h  src.pri  utils.cpp  utils.h
libquickevent/libquickeventgui/: CMakeLists.txt  libquickeventgui-cs_CZ.ts  libquickeventgui-fr_FR.ts  libquickeventgui-nb_NO.ts  libquickeventgui-nl_BE.ts  libquickeventgui-pl_PL.ts  libquickeventgui-ru_RU.ts  libquickeventgui-uk_UA.ts  libquickeventgui.cs_CZ.ts  libquickeventgui.fr_FR.ts  libquickeventgui.nb_NO.ts  libquickeventgui.nl_BE.ts  libquickeventgui.pl_PL.ts  libquickeventgui.pro  libquickeventgui.qrc  libquickeventgui.ru_RU.ts  libquickeventgui.uk_UA.ts
libquickevent/libquickeventgui/src/: partwidget.cpp  partwidget.h  quickeventguiglobal.h  reportoptionsdialog.cpp  reportoptionsdialog.h  reportoptionsdialog.ui  src.pri
libsiut/: CMakeLists.txt  libsiut-cs_CZ.ts  libsiut-fr_FR.ts  libsiut-nb_NO.ts  libsiut-nl_BE.ts  libsiut-pl_PL.ts  libsiut-ru_RU.ts  libsiut-uk_UA.ts  libsiut.cs_CZ.ts  libsiut.fr_FR.ts  libsiut.nb_NO.ts  libsiut.nl_BE.ts  libsiut.pl_PL.ts  libsiut.pri  libsiut.pro  libsiut.ru_RU.ts  libsiut.uk_UA.ts
libsiut/include/: commport.h  sidevicedriver.h  simessage.h  simessagedata.h
libsiut/include/siut/: commport.h  sicard.h  sidevicedriver.h  simessage.h  simessagedata.h  sipunch.h  sitask.h  siutglobal.h
libsiut/src/: sicard.cpp  sicard.h  sipunch.cpp  sipunch.h  siutglobal.h  src.pri
libsiut/src/device/: commport.cpp  commport.h  commport_unix.cpp  commport_unix.h  commport_win.cpp  commport_win.h  crc529.c  crc529.h  device.pri  sidevicedriver.cpp  sidevicedriver.h  sitask.cpp  sitask.h
libsiut/src/message/: message.pri  simessage.cpp  simessage.h  simessagedata.cpp  simessagedata.h
quickevent/app/quickevent/: CMakeLists.txt  quickevent-cs_CZ.ts  quickevent-fr_FR.ts  quickevent-nb_NO.ts  quickevent-nl_BE.ts  quickevent-pl_PL.ts  quickevent-ru_RU.ts  quickevent-uk_UA.ts  quickevent.cs_CZ.ts  quickevent.fr_FR.ts  quickevent.nb_NO.ts  quickevent.nl_BE.ts  quickevent.pl_PL.ts  quickevent.pro  quickevent.ru.ts  quickevent.ru_RU.ts  quickevent.uk_UA.ts
quickshow/: CMakeLists.txt  appclioptions.cpp  appclioptions.h  application.cpp  application.h  main.cpp  model.cpp  model.h  quickshow-nb_NO.ts  quickshow-nl_BE.ts  quickshow-pl_PL.ts  quickshow-ru_RU.ts  quickshow-uk_UA.ts  quickshow.conf  quickshow.cs_CZ.ts  quickshow.fr_FR.ts  quickshow.nb_NO.ts  quickshow.pl_PL.ts  quickshow.pro  quickshow.rc  quickshow.ru_RU.ts
quickshow/datafiles/: quickshow-example.conf
quickshow/quickshow-data/: quickshow-example.conf  quickshow.conf
quickshow/src/: appclioptions.cpp  appclioptions.h  application.cpp  application.h  cellrenderer.cpp  cellrenderer.h  cellstartlist.cpp  cellstartlist.h  cellstartlist.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  resultscell.cpp  resultscell.h  resultscell.ui  src.pri  table.cpp  table.h
tools/qsqlmon/: CMakeLists.txt  qsqlmon-cs_CZ.ts  qsqlmon-fr_FR.ts  qsqlmon-nb_NO.ts  qsqlmon-nl_BE.ts  qsqlmon-pl_PL.ts  qsqlmon-ru_RU.ts  qsqlmon-uk_UA.ts  qsqlmon.conf.xml  qsqlmon.cs_CZ.ts  qsqlmon.fr_FR.ts  qsqlmon.iss  qsqlmon.nb_NO.ts  qsqlmon.nl_BE.ts  qsqlmon.pl_PL.ts  qsqlmon.pro  qsqlmon.ru_RU.ts  qsqlmon.uk_UA.ts  qsqlmon_cz.ts
(+2579 files in other folders)
